fixes spacing and title size

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -160,6 +160,12 @@ a:hover {
 
 .page-title {
 	padding-top: 1em;
+	margin-bottom: 0;
+	font-size: 2.5em;
+}
+
+.time {
+	margin-top: 0;
 }
 
 .post {
